force-app/main/default/objects/vlocity_cmt__StringTranslation__c/fields/vlocity_cmt__StringId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StringId__c</fullName>
    <label>Vlocity String</label>
    <referenceTo>vlocity_cmt__String__c</referenceTo>
    <relationshipLabel>Vlocity String Translations</relationshipLabel>
    <relationshipName>VlocityStringTranslations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>