force-app/main/default/objects/vlocity_cmt__StringTranslation__c/fields/vlocity_cmt__Translation__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Translation__c</fullName>
    <description>This field holds the translation for a given string and locale code</description>
    <label>Translation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>